--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -36,6 +36,8 @@ jobs:
         uses: actions/checkout@v3
       - name: "Download binary artifact"
         uses: actions/download-artifact@v3
+        with:
+          name: shipper-binary
       - name: "Build RPM package"
         shell: bash
         run: |
