--- a/beatshipper-conf.yml
+++ b/beatshipper-conf.yml
@@ -1,8 +1,11 @@
 ---
 host: "localhost"
 port: "5044"
+# array of paths that will be exploded using `GLOB`
 path:
-  - "/rhos-infra-dev-netapp/jenkins-logs/rcj/*/*/*/var/log/extra/rpm-list.txt.gz"
-  - "/rhos-infra-dev-netapp/jenkins-logs/rcj/*/*/*/var/log/extra2/rpm-list.txt.gz"
+  - "/jenkinst-test/jenkins-logs/rcj/*/*/*/var/log/extra/rpm-list.txt.gz"
+  - "/jenkinst-test/jenkins-logs/rcj/*/*/*/var/log/extra2/rpm-list.txt.gz"
+# the name of the file where we'll store the processed files.
 registry: "shipper_registry.json"
+# time of recheck (re-process) if there are new pending files to send
 recheck: 5s
