Add logsource field to both configuration yml and struct

--- a/beatshipper-conf.yml
+++ b/beatshipper-conf.yml
@@ -9,3 +9,4 @@ path:
 registry: "shipper_registry.json"
 # time of recheck (re-process) if there are new pending files to send
 recheck: 5s
+log_source: 'gzip_files'
