--- a/beatshipper-conf.yml
+++ b/beatshipper-conf.yml
@@ -2,7 +2,7 @@
 host: "localhost"
 port: "5044"
 # array of paths that will be exploded using `GLOB`
-path:
+paths:
   - "/jenkinst-test/jenkins-logs/rcj/*/*/*/var/log/extra/rpm-list.txt.gz"
   - "/jenkinst-test/jenkins-logs/rcj/*/*/*/var/log/extra2/rpm-list.txt.gz"
 # the name of the file where we'll store the processed files.
